assets/css/flat-admin.css
/* ... */
aside.app-sidebar {
  background-color: #FFF; }
  aside.app-sidebar .sidebar-header .sidebar-brand .highlight {
    background-color: #29c75f; }
  aside.app-sidebar .sidebar-menu ul.sidebar-nav > li > a .icon {
    background-color: rgba(141, 146, 147, 0.15);
    color: rgba(141, 146, 147, 0.45); }
  aside.app-sidebar .sidebar-menu ul.sidebar-nav > li > a .title {
    color: #8d9293; }
  aside.app-sidebar .sidebar-menu ul.sidebar-nav > li.active > a .icon {
    background-color: rgba(41, 199, 95, 0.25);
    color: rgba(41, 199, 95, 0.75); }
  aside.app-sidebar .sidebar-menu ul.sidebar-nav > li.active > a .title {
    color: #29c75f; }
  aside.app-sidebar .sidebar-menu ul.sidebar-nav > li.dropdown > .dropdown-menu > ul > li.section {
    color: #29c75f; }
  aside.app-sidebar .sidebar-menu ul.sidebar-nav > li.dropdown.open > a:after {
    border-right-color: #FFF; }
  aside.app-sidebar .sidebar-footer {
    border-top-color: rgba(0, 0, 0, 0.1);
    background-color: #FFF; }
    aside.app-sidebar .sidebar-footer ul.menu > li.dropdown .dropdown-menu {
      border-bottom-color: #29c75f; }

.app-login {
  background-image: url("http://localhost/project_athena_emr/assets/images/collage.jpg");
  background-size: cover;
  padding: 0 !important; }
  .app-login .app-body {
    position: relative;
    display: -ms-flexbox;
    display: flex; }
    .app-login .app-body .app-block {
      transition: all 0.2s ease;
      background-color: #FFF;
      border-radius: 2px;
      position: relative;
      display: -ms-flexbox;
      display: flex;
      -ms-flex-direction: row;
          flex-direction: row;
      -ms-flex-wrap: nowrap;
          flex-wrap: nowrap;
      -ms-flex-align: center;
          align-items: center;
      -ms-flex-pack: center;
          justify-content: center; }
      .app-login .app-body .app-block .app-right-section {
        background-color: #18aa4a;
        border-top-left-radius: 2px;
        border-bottom-left-radius: 2px;
        height: 100%;
        position: relative;
        padding: 4rem 6rem; }
        .app-login .app-body .app-block .app-right-section .app-brand {
          font-size: 1.5em;
          font-weight: 200;
          color: #FFF;
          padding-bottom: 4rem;
          margin-bottom: 4rem;
          border-bottom: 1px solid rgba(15, 121, 51, 0.25); }
          .app-login .app-body .app-block .app-right-section .app-brand .highlight {
            color: #18aa4a;
            background-color: white;
            border-radius: 2px;
            padding: 2px 8px;
            font-weight: 200; }
        .app-login .app-body .app-block .app-right-section .app-info ul.list {
          list-style: none;
          padding: 0;
          margin: 0; }
          .app-login .app-body .app-block .app-right-section .app-info ul.list li {
            margin-bottom: 2rem;
            display: -ms-flexbox;
            display: flex;
            -ms-flex-direction: row;
                flex-direction: row;
            -ms-flex-wrap: nowrap;
                flex-wrap: nowrap;
            -ms-flex-align: center;
                align-items: center;
            -ms-flex-pack: start;
                justify-content: flex-start; }
            .app-login .app-body .app-block .app-right-section .app-info ul.list li .icon {
              display: -ms-flexbox;
              display: flex;
              -ms-flex-direction: row;
                  flex-direction: row;
              -ms-flex-wrap: nowrap;
                  flex-wrap: nowrap;
              -ms-flex-align: center;
                  align-items: center;
              -ms-flex-pack: center;
                  justify-content: center;
              display: block;
              margin: 0 auto;
              background-color: #FFF;
              color: #18aa4a;
              width: 30px;
              height: 30px;
              border-radius: 50%;
              transition: all 0.2s ease; }
              .app-login .app-body .app-block .app-right-section .app-info ul.list li .icon i.fa, .app-login .app-body .app-block .app-right-section .app-info ul.list li .icon i.ion {
                width: 100%;
                height: 100%;
                font-size: 2em;
                display: -ms-flexbox;
                display: flex;
                -ms-flex-direction: row;
                    flex-direction: row;
                -ms-flex-wrap: nowrap;
                    flex-wrap: nowrap;
                -ms-flex-align: center;
                    align-items: center;
                -ms-flex-pack: center;
                    justify-content: center;
                transition: all 0.2s ease; }
            .app-login .app-body .app-block .app-right-section .app-info ul.list li .title {
              -ms-flex: 1;
                  flex: 1;
              font-weight: 300;
              padding: 0 1rem;
              font-size: 0.9em;
              color: #FFF; }
      .app-login .app-body .app-block .app-form {
        padding: 4rem;
        position: relative;
        -ms-flex: 1;
            flex: 1; }
        .app-login .app-body .app-block .app-form .form-header {
          display: -ms-flexbox;
          display: flex;
          -ms-flex-direction: row;
              flex-direction: row;
          -ms-flex-wrap: nowrap;
              flex-wrap: nowrap;
          -ms-flex-align: center;
              align-items: center;
          -ms-flex-pack: center;
              justify-content: center;
          font-size: 2em;
          font-weight: 200;
          color: #444;
          margin-bottom: 4rem; }
          .app-login .app-body .app-block .app-form .form-header .highlight {
            font-weight: 400;
            color: #29c75f;
            margin-right: 2px; }
        .app-login .app-body .app-block .app-form .form-suggestion {
          margin-bottom: 15px; }
        .app-login .app-body .app-block .app-form form {
          min-width: 280px; }
/* ... */

